--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -1,11 +1,11 @@
 body
 {
-	background-image:url('undersea-bg.png');
+	background-image:url('../images/undersea-bg.png'); // Gotta be relative paths for this project :(
 	background-repeat:no-repeat;
     	background-size:cover;
    	background-position: center;
-	width = 100%;
-	height = 100%;
+	width: 100%;
+	height: 100%;
 	position: fixed;
 	left: 0px;
 	right: 0px;
