--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -1,3 +1,8 @@
+@mixin centered {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 body
 {
 	background-image:url('../images/undersea-bg.png'); // Gotta be relative paths for this project :(
@@ -12,8 +17,7 @@ body
 }
 
 
-#iframe{
+#game-frame {
+	@include centered;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
