--- a/css/seng499.css
+++ b/css/seng499.css
@@ -1,4 +1,4 @@
-body {
+.background {
   background-image: url("../images/undersea-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -7,7 +7,8 @@ body {
   height: 100%;
   position: fixed;
   left: 0px;
-  right: 0px; }
+  right: 0px;
+  z-index: -100; }
 
 #game-frame {
   margin-left: auto;
