--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -3,8 +3,7 @@
 	margin-right: auto;
 }
 
-body
-{
+.background {
 	background-image:url('../images/undersea-bg.png'); // Gotta be relative paths for this project :(
 	background-repeat:no-repeat;
     	background-size:cover;
@@ -14,6 +13,7 @@ body
 	position: fixed;
 	left: 0px;
 	right: 0px;
+	z-index: -100;
 }
 
 
