--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -1,6 +1,21 @@
+$main-text-color: white;
+$main-text-font: "arial";
+
+@mixin transparent-background {
+
+	background-color: rgba(0, 0, 0, 0.65);
+}
+
 @mixin centered {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+body {
+
+	margin: 0px;
+	color: $main-text-color;
+	font-family: $main-text-font;
 }
 
 .background {
@@ -16,6 +31,13 @@
 	z-index: -100;
 }
 
+.title-bar {
+	@include centered;
+	width: 100%;
+	font-size: 20px;
+	padding: 20px;
+	@include transparent-background;
+}
 
 #game-frame {
 	@include centered;
