--- a/css/seng499.css
+++ b/css/seng499.css
@@ -43,3 +43,24 @@ div {
   margin-right: auto;
   width: 700px;
   padding: 40px 0px; }
+
+.nav-bar {
+  margin-left: auto;
+  margin-right: auto;
+  width: 755px;
+  margin-top: 20px; }
+
+.nav-bar-link {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(0, 0, 0, 0.65);
+  width: 32.9%;
+  height: 30px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 3px 3px 0px 0px; }
+  .nav-bar-link a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    top: 10px; }
