--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -1,6 +1,6 @@
 $main-text-color: white;
 $main-text-font: "arial";
-$content-container-width: 820px;
+$content-container-width: 860px;
 $content-width: 800px;
 $nav-bar-width: $content-container-width - 20px;
 $soft-corner: 3px;
@@ -41,6 +41,7 @@ body {
 	font-size: 20px;
 	padding: 20px;
 	@include transparent-background;
+	font-weight: bold;
 }
 
 #game-frame {
@@ -88,5 +89,6 @@ div {
 		text-decoration: none;
 		position: relative;
 		top: 10px;
+		font-weight: bold;
 	}
 }
