Started reworking the home page

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -22,4 +22,6 @@
 		// This is suck, but autocentering doesn't seem to work between two floats
 		margin-left: 150px;
 	}
+
+	@include subdued-headings;
 }
