--- a/scss/implementation.scss
+++ b/scss/implementation.scss
@@ -1,3 +1,5 @@
+@import "common";
+
 .content {
 
 	a {
@@ -12,7 +14,5 @@
 		}
 	}
 
-	h2 {
-		font-size: large;
-	}
+	@include subdued-headings;
 }
