--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -32,7 +32,7 @@ body {
 
 .title-bar {
 	@include centered;
-	width: 100%;
+	//width: 100%;
 	font-size: 20px;
 	padding: 20px;
 	@include transparent-background;
