Little more for the description, change highlight

--- a/css/seng499.css
+++ b/css/seng499.css
@@ -6,7 +6,7 @@ body {
     color: white;
     text-decoration: none; }
     body a:hover {
-      color: gray; }
+      color: red; }
 
 .background {
   background-image: url("../images/undersea-bg.png");
