--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,4 +1,5 @@
 $main-text-color: white;
+$highlight-text-color: red;
 $main-text-font: "arial";
 $content-container-width: 860px;
 $content-width: 800px;
