--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -12,7 +12,7 @@ body {
 		color: $main-text-color;
 		text-decoration: none;
 		&:hover {
-			color: gray;
+			color: $highlight-text-color;
 		}
 	}
 }
