Made the entire tabs links becauase what

--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -78,7 +78,7 @@ div {
 	text-align: center;
 	border-radius: $soft-corner $soft-corner 0px 0px;
 
-	a {
+	span {
 
 		position: relative;
 		top: 10px;
