--- a/css/seng499.css
+++ b/css/seng499.css
@@ -64,7 +64,7 @@ div {
   display: inline-block;
   text-align: center;
   border-radius: 3px 3px 0px 0px; }
-  .nav-bar-link a {
+  .nav-bar-link span {
     position: relative;
     top: 10px;
     font-weight: bold; }
