--- a/scss/seng499.scss
+++ b/scss/seng499.scss
@@ -5,16 +5,7 @@ body {
 	margin: 0px;
 	color: $main-text-color;
 	font-family: $main-text-font;
-
-
-	a {
-
-		color: $main-text-color;
-		text-decoration: none;
-		&:hover {
-			color: $highlight-text-color;
-		}
-	}
+	@include regular-links;
 }
 
 .background {
@@ -32,11 +23,16 @@ body {
 
 .title-bar {
 	@include centered;
-	//width: 100%;
-	font-size: 20px;
-	padding: 20px;
 	@include transparent-background;
+	@include main-links;
+
+	font-size: 20px;
 	font-weight: bold;
+
+	div {
+
+		padding: 20px;
+	}
 }
 
 #game-frame {
@@ -57,21 +53,22 @@ div {
 
 .content {
 	@include centered;
+	@include subdued-headings;
 	width: $content-width;
 	padding: 40px 0px;
 }
 
 .nav-bar {
-
 	@include centered;
+	@include main-links;
 	width: $nav-bar-width;
 	margin-top: 20px;
-
 }
 
 .nav-bar-link {
 	@include centered;
 	@include transparent-background;
+
 	width: 24.5%;
 	height: 30px;
 	display: inline-block;
