--- a/css/seng499.css
+++ b/css/seng499.css
@@ -8,6 +8,9 @@ body {
     body a:hover {
       color: white; }
 
+p {
+  margin: 8px 0px; }
+
 .background {
   background-image: url("../images/undersea-bg.png");
   background-repeat: no-repeat;
@@ -55,7 +58,8 @@ div {
   width: 800px;
   padding: 40px 0px; }
   .content h2 {
-    font-size: large; }
+    font-size: large;
+    margin-top: 40px; }
 
 .nav-bar {
   margin-left: auto;
